cambio de numero y gmail

--- a/index.html
+++ b/index.html
@@ -353,14 +353,17 @@
                     <div class="galeria-videos">
                         <video controls loop src="img/Entrevista-Filbo.mp4" type="video/mp4"></video>
                         <video controls loop src="Videos/lalamachuca.mp4" type="video/mp4"></video>
-                        <div id="video-container" style="position: relative; width: 560px; height: 315px; margin: auto;">
-                        <img src="img/Luci-Lila.png" alt="Miniatura del conversatorio FILBO" style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; cursor: pointer;" onclick="mostrarVideo()">
+                        <div id="video-container"
+                            style="position: relative; width: 560px; height: 315px; margin: auto;">
+                            <img src="img/Luci-Lila.png" alt="Miniatura del conversatorio FILBO"
+                                style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; cursor: pointer;"
+                                onclick="mostrarVideo()">
                         </div>
 
                         <script>
-                        function mostrarVideo() {
-                            const container = document.getElementById('video-container');
-                            container.innerHTML = `
+                            function mostrarVideo() {
+                                const container = document.getElementById('video-container');
+                                container.innerHTML = `
                             <iframe 
                                 src="https://drive.google.com/file/d/1oMfOYNwG6f1fJ42onartlg53zGLy-3Di/preview" 
                                 width="560" 
@@ -371,7 +374,7 @@
                                 style="border-radius: 12px;">
                             </iframe>
                             `;
-                        }
+                            }
                         </script>
 
 
@@ -488,8 +491,8 @@
         <footer>
             <p>&copy; 2025 CIA - Compañía Arte y Vida. Todos los derechos reservados.</p>
             <br>
-            <p>Email: contacto@cia-artevivo.com</p>
-            <p>Teléfono: +57 312 587 1761</p>
+            <p>Email: Prueba@gmail.com</p>
+            <p>Teléfono: +57 123 456 7890</p>
         </footer>
 
         <script>
