--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
         <footer>
             <p>&copy; 2025 CIA - Compañía Arte y Vida. Todos los derechos reservados.</p>
             <br>
-            <p>Email: Prueba@gmail.com</p>
-            <p>Teléfono: +57 123 456 7890</p>
+            <p>Email: grupoarteyvida@gmail.com</p>
+            <p>Teléfono: +57 312 591 3006</p>
         </footer>
 
         <script>
