--- a/index.html
+++ b/index.html
@@ -492,7 +492,14 @@
             <p>&copy; 2025 CIA - Compañía Arte y Vida. Todos los derechos reservados.</p>
             <br>
             <p>Email: grupoarteyvida@gmail.com</p>
-            <p>Teléfono: +57 312 591 3006</p>
+            <p>
+                Teléfono: <a href="tel:+573125913006">+57 312 591 3006</a>
+                &nbsp;|&nbsp;
+                <a href="https://wa.me/573125913006" target="_blank" rel="noopener" aria-label="Contactar por WhatsApp">
+                    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp"
+                        style="width:1.3em;vertical-align:middle;margin-right:0.3em;">WhatsApp
+                </a>
+            </p>
         </footer>
 
         <script>
