--- a/index.html
+++ b/index.html
@@ -495,9 +495,10 @@
             <p>
                 Teléfono: <a href="tel:+573125913006">+57 312 591 3006</a>
                 &nbsp;|&nbsp;
-                <a href="https://wa.me/573125913006" target="_blank" rel="noopener" aria-label="Contactar por WhatsApp">
+                <a href="https://wa.me/573125913006" target="_blank" rel="noopener" aria-label="Contactar por WhatsApp"
+                    style="display:inline-flex;align-items:center;background:#25D366;color:#fff;padding:0.4em 1em;border-radius:8px;font-weight:600;text-decoration:none;box-shadow:0 2px 8px rgba(37,211,102,0.18);transition:background 0.2s;">
                     <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp"
-                        style="width:1.3em;vertical-align:middle;margin-right:0.3em;">WhatsApp
+                        style="width:1.3em;vertical-align:middle;margin-right:0.5em;filter:invert(1);">WhatsApp
                 </a>
             </p>
         </footer>
