--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@
         <footer>
             <p>&copy; 2025 CIA - Compañía Arte y Vida. Todos los derechos reservados.</p>
             <br>
-            <p>Email: grupoarteyvida@gmail.com</p>
+            <p></p>
             <p>
-                Teléfono: <a href="tel:+573125913006">+57 312 591 3006</a>
+                Teléfono: <a href="grupoarteyvida@gmail.com">Email: grupoarteyvida@gmail.com</a>
                 &nbsp;|&nbsp;
                 <a href="https://wa.me/573125913006" target="_blank" rel="noopener" aria-label="Contactar por WhatsApp"
                     style="display:inline-flex;align-items:center;background:#25D366;color:#fff;padding:0.4em 1em;border-radius:8px;font-weight:600;text-decoration:none;box-shadow:0 2px 8px rgba(37,211,102,0.18);transition:background 0.2s;">
