--- a/index.html
+++ b/index.html
@@ -325,13 +325,18 @@
                 </ul>
             </nav>
             <script>
-                // Mostrar botón solo en móvil
                 function handleMenuDisplay() {
                     const btn = document.getElementById('menu-toggle');
                     const menu = document.getElementById('main-menu');
                     if (window.innerWidth <= 640) {
                         btn.style.display = 'inline-block';
-                        menu.style.maxHeight = btn.getAttribute('aria-expanded') === 'true' ? menu.scrollHeight + 'px' : '0';
+                        // Si está expandido, mostrar todos los elementos
+                        if (btn.getAttribute('aria-expanded') === 'true') {
+                            menu.style.maxHeight = menu.scrollHeight + 'px';
+                        } else {
+                            // Siempre calcular el scrollHeight para todos los elementos
+                            menu.style.maxHeight = '0';
+                        }
                     } else {
                         btn.style.display = 'none';
                         menu.style.maxHeight = 'none';
@@ -341,7 +346,12 @@
                     const menu = document.getElementById('main-menu');
                     const expanded = this.getAttribute('aria-expanded') === 'true';
                     this.setAttribute('aria-expanded', !expanded);
-                    menu.style.maxHeight = !expanded ? menu.scrollHeight + 'px' : '0';
+                    // Forzar recalcular el scrollHeight para mostrar todos los elementos
+                    if (!expanded) {
+                        menu.style.maxHeight = menu.scrollHeight + 'px';
+                    } else {
+                        menu.style.maxHeight = '0';
+                    }
                 });
                 window.addEventListener('resize', handleMenuDisplay);
                 document.addEventListener('DOMContentLoaded', handleMenuDisplay);
@@ -357,6 +367,8 @@
                         background: rgba(15, 23, 42, 0.95);
                         border-radius: 10px;
                         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+                        overflow: hidden;
+                        transition: max-height 0.4s;
                     }
 
                     nav ul#main-menu li {
