cambios en el menu por tercera vez

--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                     &#9776;
                 </button>
                 <ul id="main-menu" style="transition:max-height 0.4s;overflow:hidden;">
-                    <li><a href="#acerca">Acerca de</a></li>
+                    <li><a href="#acerca">Acerca</a></li>
                     <li><a href="#eventos">Eventos</a></li>
                     <li><a href="#FILBO2025">FILBO2025</a></li>
                     <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="admin.html" aria-label="Área administrativa">Área Administrativa</a></li>
+                    <li><a href="admin.html" aria-label="Área administrativa">Admin</a></li>
                 </ul>
             </nav>
             <script>
