--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             <br>
             <hr>
             <p>
-                Email: <a href="mailto:grupoarteyvida@gmail.com">grupoarteyvida@gmail.com</a>
+               <a href="mailto:grupoarteyvida@gmail.com?subject=Información%20sobre%20sus%20servicios&body=Hola,%20quisiera%20recibir%20más%20información%20sobre%20sus%20servicios.">Solicita información</a> 
                 &nbsp;|&nbsp;
                 <a href="https://wa.me/573125913006" target="_blank" rel="noopener" aria-label="Contactar por WhatsApp"
                     style="display:inline-flex;align-items:center;background:#25D366;color:#fff;padding:0.4em 1em;border-radius:8px;font-weight:600;text-decoration:none;box-shadow:0 2px 8px rgba(37,211,102,0.18);transition:background 0.2s;">
