--- a/index.html
+++ b/index.html
@@ -1,312 +1,11 @@
 <head>
     <meta charset="UTF-8">
     <title>CIA - Compañia Arte y Vida</title>
-    <style>
-        /*body {
-            background-image: url(IMG/fondo.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-        }*/
-
-        /* Cortinas */
-        .curtain {
-            position: fixed;
-            top: 0;
-            width: 50vw;
-            height: 100vh;
-            background: red;
-            z-index: 9999;
-            transition: transform 1s cubic-bezier(.77, 0, .18, 1);
-        }
-
-        .curtain.left {
-            left: 0;
-            transform: translateX(0);
-        }
-
-        .curtain.right {
-            right: 0;
-            transform: translateX(0);
-        }
-
-        .curtain.open.left {
-            transform: translateX(-100%);
-        }
-
-        .curtain.open.right {
-            transform: translateX(100%);
-        }
-
-        /* Botón centrado */
-        .curtain-btn-container {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            z-index: 10000;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-
-        .curtain-btn {
-            background: white;
-            color: #222;
-            border: none;
-            font-size: 1.5rem;
-            padding: 1em 2em;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background 0.3s, color 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 0.5em;
-        }
-
-        .curtain-btn .arrow {
-            display: none;
-            font-size: 1.5em;
-            transition: transform 0.3s;
-        }
-
-        .curtain-btn:hover {
-            background: white;
-            color: black;
-        }
-
-        .curtain-btn:hover .arrow {
-            display: inline;
-            transform: translateX(10px);
-        }
-
-        .curtain-btn .text-continue {
-            display: none;
-        }
-
-        .curtain-btn:hover .text-continue {
-            display: inline;
-        }
-
-        .curtain-btn:hover .text-question {
-            display: none;
-        }
-
-        /* Ocultar cortinas al abrir */
-        body.curtain-open .curtain,
-        body.curtain-open .curtain-btn-container {
-            pointer-events: none;
-        }
-
-        body.curtain-open .curtain-btn-container {
-            opacity: 0;
-            transition: opacity 0.5s;
-        }
-    </style>
+    <link rel="stylesheet" href="Styles.css" />
 </head>
 
 <body>
-    <!-- ...tu contenido... -->
-    <!DOCTYPE html>
-    <html lang="es">
-
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>CIA - Compañía Arte y Vida</title>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
-
-            *,
-            *::before,
-            *::after {
-                box-sizing: border-box;
-            }
-
-            /*linear-gradient(135deg, #1e293b, #0f172a)*/
-
-            body {
-                margin: 0;
-                font-family: 'Poppins', sans-serif;
-                background: linear-gradient(135deg, #1e293b, #0f172a);
-                color: #e0e7ff;
-                line-height: 1.6;
-                min-height: 100vh;
-                display: flex;
-                flex-direction: column;
-            }
-
-            a {
-                color: #22d3ee;
-                text-decoration: none;
-                transition: color 0.3s ease;
-            }
-
-            a:hover,
-            a:focus {
-                color: #14b8a6;
-                outline: none;
-            }
-
-            header {
-                background: rgba(15, 23, 42, 0.85);
-                backdrop-filter: saturate(180%) blur(10px);
-                padding: 1.5rem 2rem;
-                position: sticky;
-                top: 0;
-                z-index: 1000;
-                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            }
-
-            header h1 {
-                margin: 0;
-                font-weight: 700;
-                font-size: 1.8rem;
-                color: #0deefd;
-            }
-
-            nav ul {
-                list-style: none;
-                padding: 0;
-                margin: 1rem 0 0 0;
-                display: flex;
-                gap: 1.5rem;
-                justify-content: center;
-                align-items: center;
-            }
-
-            nav li {
-                align-self: center;
-            }
-
-            nav a {
-                font-weight: 500;
-                font-size: 1rem;
-                padding: 0.375rem 0.75rem;
-                border-radius: 10px;
-                display: inline-block;
-                text-align: center;
-            }
-
-            nav a:focus-visible {
-                outline: 2px solid #14b8a6;
-            }
-
-            main {
-                flex: 1;
-                max-width: 960px;
-                margin: 3rem auto;
-                width: 90%;
-            }
-
-            section#eventos h2 {
-                font-size: 2rem;
-                font-weight: 700;
-                margin-bottom: 2rem;
-                color: #22d3ee;
-                text-align: center;
-            }
-
-            .evento {
-                background: rgba(15, 23, 42, 0.8);
-                border-radius: 16px;
-                box-shadow:
-                    0 2px 8px rgba(0, 0, 0, 0.4),
-                    inset 0 0 12px #14b8a6;
-                margin-bottom: 2rem;
-                padding: 1.75rem 2rem;
-                display: grid;
-                grid-template-columns: 1fr auto;
-                align-items: center;
-                gap: 1rem;
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
-            }
-
-            .evento:hover,
-            .evento:focus-within {
-                transform: translateY(-6px);
-                box-shadow:
-                    0 8px 24px rgba(20, 184, 166, 0.6),
-                    inset 0 0 18px #14b8a6;
-            }
-
-            .evento h3 {
-                margin: 0 0 0.5rem 0;
-                font-weight: 700;
-                font-size: 1.25rem;
-                color: #67e8f9;
-            }
-
-            .evento p {
-                margin: 0.125rem 0;
-                font-weight: 300;
-                color: #cbd5e1;
-            }
-
-            .evento .fecha {
-                font-weight: 600;
-                color: #0deefd;
-            }
-
-            .btn-comprar {
-                background: linear-gradient(135deg, #14b8a6, #0f766e);
-                border: none;
-                color: white;
-                padding: 0.75rem 1.25rem;
-                font-weight: 600;
-                border-radius: 12px;
-                cursor: pointer;
-                font-size: 1rem;
-                box-shadow: 0 4px 12px rgba(20, 184, 166, 0.6);
-                transition: background 0.3s ease, transform 0.3s ease;
-            }
-
-            .btn-comprar:hover,
-            .btn-comprar:focus {
-                background: linear-gradient(135deg, #0f766e, #14b8a6);
-                outline: none;
-                transform: scale(1.05);
-            }
-
-            footer {
-                background: rgba(15, 23, 42, 0.85);
-                backdrop-filter: saturate(180%) blur(10px);
-                color: #94a3b8;
-                text-align: center;
-                padding: 1rem 2rem;
-                font-size: 0.875rem;
-                user-select: none;
-            }
-
-            /* Responsive */
-            @media (max-width: 640px) {
-                header h1 {
-                    font-size: 1.5rem;
-                }
-
-                nav ul {
-                    flex-direction: column;
-                    margin-top: 1rem;
-                    gap: 0.75rem;
-                }
-
-                .evento {
-                    grid-template-columns: 1fr;
-                    padding: 1.25rem 1.5rem;
-                }
-
-                .btn-comprar {
-                    width: 100%;
-                    justify-self: stretch;
-                    text-align: center;
-                }
-
-                main {
-                    margin: 2rem auto;
-                    width: 95%;
-                }
-            }
-        </style>
-    </head>
-
-    <body>
+   
         <header>
             <center>
                 <h1>CIA - Compañía Arte y Vida</h1>
@@ -356,37 +55,6 @@
                 window.addEventListener('resize', handleMenuDisplay);
                 document.addEventListener('DOMContentLoaded', handleMenuDisplay);
             </script>
-            <style>
-                @media (max-width: 640px) {
-                    nav ul#main-menu {
-                        flex-direction: column;
-                        gap: 0.75rem;
-                        max-height: 0;
-                        padding: 0;
-                        margin: 0;
-                        background: rgba(15, 23, 42, 0.95);
-                        border-radius: 10px;
-                        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-                        overflow: hidden;
-                        transition: max-height 0.4s;
-                    }
-
-                    nav ul#main-menu li {
-                        width: 100%;
-                        text-align: center;
-                    }
-
-                    nav ul#main-menu li a {
-                        display: block;
-                        padding: 1rem 0;
-                    }
-
-                    #menu-toggle {
-                        display: inline-block !important;
-                        margin-bottom: 0.5rem;
-                    }
-                }
-            </style>
         </header>
         <main>
             <section id="acerca" tabindex="0" aria-label="Acerca de CIA">
@@ -447,55 +115,7 @@
 
                     </div>
                 </div>
-                <style>
-                    .filbo-galeria {
-                        text-align: center;
-                        margin: 2rem 0;
-                    }
-
-                    .filbo-galeria h3 {
-                        margin-bottom: 1.5rem;
-                        color: #22d3ee;
-                        font-size: 1.3rem;
-                        font-weight: 600;
-                        letter-spacing: 1px;
-                    }
-
-                    .galeria-videos {
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 1.5rem;
-                        justify-content: center;
-                        align-items: flex-start;
-                    }
-
-                    .galeria-videos video {
-                        max-width: 400px;
-                        width: 100%;
-                        border-radius: 12px;
-                        box-shadow: 0 4px 16px rgba(20, 184, 166, 0.25);
-                        background: #0f172a;
-                        outline: none;
-                        transition: transform 0.3s;
-                    }
-
-                    .galeria-videos video:hover,
-                    .galeria-videos video:focus {
-                        transform: scale(1.03);
-                        box-shadow: 0 8px 32px rgba(20, 184, 166, 0.35);
-                    }
-
-                    @media (max-width: 900px) {
-                        .galeria-videos {
-                            flex-direction: column;
-                            gap: 2rem;
-                        }
-
-                        .galeria-videos video {
-                            max-width: 75%;
-                        }
-                    }
-                </style>
+               
             </section>
 
             <section id="contacto" tabindex="0" aria-label="Contacto con CIA">
