se quito etiqueta styles
Removed inline styles from admin.html and linked to an external stylesheet.

--- a/admin.html
+++ b/admin.html
@@ -5,267 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel Administrativo - CIA</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #e0e7ff;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      background: rgba(15, 23, 42, 0.9);
-      backdrop-filter: saturate(180%) blur(10px);
-      padding: 1rem 2rem;
-      text-align: center;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    header h1 {
-      margin: 0;
-      font-weight: 700;
-      font-size: 1.8rem;
-      color: #0deefd;
-    }
-
-    main {
-      flex: 1;
-      max-width: 960px;
-      margin: 3rem auto;
-      width: 90%;
-    }
-
-    .hidden {
-      display: none !important;
-    }
-
-    /* Login form styles */
-    #loginForm {
-      background: rgba(15, 23, 42, 0.85);
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: inset 0 0 12px #14b8a6;
-      max-width: 400px;
-      margin: 6rem auto;
-      text-align: center;
-    }
-
-    #loginForm h2 {
-      margin-bottom: 1.5rem;
-      color: #22d3ee;
-    }
-
-    #loginForm label {
-      display: block;
-      margin-bottom: 0.5rem;
-      text-align: left;
-      font-weight: 500;
-      color: #a3bffa;
-    }
-
-    #loginForm input[type="password"] {
-      width: 100%;
-      padding: 0.75rem;
-      border-radius: 12px;
-      border: none;
-      font-size: 1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    #loginForm button {
-      background: linear-gradient(135deg, #14b8a6, #0f766e);
-      color: #ffffff;
-      border: none;
-      padding: 0.75rem 2rem;
-      font-weight: 600;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 1rem;
-      box-shadow: 0 4px 12px rgba(20, 184, 166, 0.6);
-      transition: background 0.3s ease, transform 0.3s ease;
-    }
-
-    #loginForm button:hover,
-    #loginForm button:focus {
-      background: linear-gradient(135deg, #0f766e, #14b8a6);
-      outline: none;
-      transform: scale(1.05);
-    }
-
-    #loginForm a {
-      text-decoration: none;
-      color: white;
-    }
-
-    #loginForm a:hover {
-      color: lightgreen;
-    }
-
-    #loginError {
-      color: #f87171;
-      margin-top: 1rem;
-      font-weight: 600;
-    }
-
-    /* Admin panel */
-    #adminPanel {
-      display: flex;
-      flex-direction: column;
-    }
-
-    h2,
-    h3 {
-      color: #22d3ee;
-    }
-
-    /* Event form */
-    form {
-      background: rgba(15, 23, 42, 0.85);
-      padding: 1.5rem 2rem;
-      border-radius: 20px;
-      box-shadow: inset 0 0 18px #14b8a6;
-      margin-bottom: 2rem;
-    }
-
-    form label {
-      display: block;
-      margin-bottom: 0.5rem;
-      font-weight: 500;
-      color: #a3bffa;
-    }
-
-    form input[type="text"],
-    form input[type="date"],
-    form input[type="time"],
-    form textarea {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1.25rem;
-      border-radius: 12px;
-      border: none;
-      font-size: 1rem;
-      resize: vertical;
-    }
-
-    form textarea {
-      min-height: 80px;
-    }
-
-    form button {
-      background: linear-gradient(135deg, yellow, #0f766e);
-      border: none;
-      color: white;
-      padding: 0.75rem 1.75rem;
-      font-weight: 600;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 1.1rem;
-      box-shadow: 0 4px 12px rgba(20, 184, 166, 0.6);
-      transition: background 0.3s ease, transform 0.3s ease;
-    }
-
-    form button:hover,
-    form button:focus {
-      background: linear-gradient(135deg, #0f766e, yellow);
-      outline: none;
-      transform: scale(1.05);
-    }
-
-    /* Event list */
-    #eventList {
-      background: rgba(15, 23, 42, 0.8);
-      border-radius: 16px;
-      padding: 1rem 1.5rem;
-      box-shadow: inset 0 0 18px #14b8a6;
-    }
-
-    #eventList ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    #eventList li {
-      background: rgba(20, 184, 166, 0.1);
-      margin-bottom: 1rem;
-      padding: 1rem 1.25rem;
-      border-radius: 12px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      color: #cbd5e1;
-    }
-
-    #eventList li div {
-      flex: 1 1 70%;
-      min-width: 200px;
-    }
-
-    #eventList li strong {
-      color: #22d3ee;
-      font-weight: 700;
-    }
-
-    #eventList li span {
-      display: block;
-      margin-top: 0.25rem;
-      font-size: 0.9rem;
-    }
-
-    #eventList li button {
-      background: none;
-      border: 2px solid #14b8a6;
-      color: #14b8a6;
-      border-radius: 12px;
-      padding: 0.35rem 0.75rem;
-      font-weight: 600;
-      cursor: pointer;
-      margin-left: 0.5rem;
-      transition: background 0.3s ease, color 0.3s ease;
-      flex: 0 0 auto;
-    }
-
-    #eventList li button:hover,
-    #eventList li button:focus {
-      background: #14b8a6;
-      color: #0f172a;
-      outline: none;
-    }
-
-    #eventForm a {
-      text-decoration: none;
-      color: white;
-    }
-
-    #eventForm a:hover {
-      color: lightgreen;
-    }
-
-    /* Responsive */
-    @media (max-width: 640px) {
-      #eventList li {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      #eventList li button {
-        margin: 0.5rem 0 0 0;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
