--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel Administrativo - CIA</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="Styles.css" />
 </head>
 
 <body>
