Se modifico el link de archivo estilos

--- a/VentaBoletos.html
+++ b/VentaBoletos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Venta de Boletos - Métodos de Pago</title>
+    <link rel="stylesheet" href="Styles.css" />
 </head>
 
 <body align="center">
